data/derived/sp14/progs/unify/prog0581.ml.out
Characters 12-15:
  let _ = acos(1);;
              ^^^
Error: This expression has type int but an expression was expected of type
         float
